--- a/Projet/projet-pc3r/src/CSS/Footer.css
+++ b/Projet/projet-pc3r/src/CSS/Footer.css
@@ -1,15 +1,16 @@
 /* Footer.css */
 
 .footer {
-    position: fixed;
+    /*position: fixed;*/
     bottom: 0;
     width: 100%;
-    height: 56px;
     /* h-14 */
     background-color: #e5e7eb;
     /* bg-neutral-200 */
     text-align: center;
-    padding: 12px 0;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+    z-index: 9999;
     /* py-3 */
 }
 
@@ -21,14 +22,19 @@
     /* pl-10 */
     padding-right: 40px;
     /* pr-10 */
+    padding-top: 12px;
+    /* pt-3 */
+    padding-bottom: 12px;
+    /* pb-3 */
 }
 
 .footer-links {
     display: flex;
+    justify-content: space-between;
+    width: 10%;
 }
 
 .footer-link {
-    margin-right: 24px;
     /* mr-6 */
     color: #6b7280;
     /* text-neutral-500 */
@@ -37,7 +43,7 @@
 }
 
 .footer-link:hover {
-    color: #4b5563;
+    color: #1b1f23;
     /* hover:text-neutral-700 */
 }
 
