--- a/Projet/projet-pc3r/src/CSS/Home.css
+++ b/Projet/projet-pc3r/src/CSS/Home.css
@@ -28,6 +28,10 @@
 }
 
 .home-container {
+    position: absolute;
+    top: 45%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -36,6 +40,6 @@
 
 .nav-links {
     display: flex;
-    margin-top: 1rem;
-    gap: 1rem;
+    margin-top: 3rem;
+    gap: 3rem;
 }
