--- a/Projet/projet-pc3r/src/CSS/Navbar.css
+++ b/Projet/projet-pc3r/src/CSS/Navbar.css
@@ -57,24 +57,42 @@
 }
 
 .nav-item a {
-    color: #6b7280;
+    padding: 10px 16px;
+    /* + d'espace horizontal & vertical */
+    border-radius: 8px;
+    transition: all 0.3s ease;
     text-decoration: none;
-    transition: color 0.3s, text-decoration 0.3s;
+    color: #333;
+    display: inline-block;
+    /* s'assure que padding est bien pris en compte */
 }
 
 .nav-item a:hover {
-    color: #4b5563;
-    /* hover:text-neutral-700 */
-    text-decoration: underline;
-    /* hover:underline */
+    color: #fff;
+    background-color: #6b7280;
+    border-radius: 8px;
+    text-decoration: none;
 }
 
 .active-nav-link {
     font-weight: bold;
-    /* active-nav-link */
-    color: #4b5563;
-    /* Couleur de l'élément actif */
+    background-color: #ffffff;
 }
+
+.home-icon-link {
+    padding-left: 12px;
+}
+
+.home-icon-link i {
+    font-size: 28px;
+    color: #333;
+    transition: color 0.3s ease;
+}
+
+.home-icon-link:hover i {
+    color: #000;
+}
+
 
 /* Bouton utilisateur */
 .user-btn {
@@ -83,7 +101,7 @@
     border-radius: 0.375rem;
     /* rounded */
     padding: 0.5rem 1rem;
-    font-size: 0.75rem;
+    font-size: 28px;
     /* text-xs */
     color: #6b7280;
     cursor: pointer;
@@ -96,4 +114,59 @@
     /* hover:shadow-lg */
     color: #4b5563;
     /* hover:text-neutral-500 */
+}
+
+.search-bar {
+    display: flex;
+    align-items: left;
+    border-radius: 20px;
+    overflow: hidden;
+    background-color: #fff;
+    padding: 5px;
+    width: 300px;
+    /* Taille modifiable */
+}
+
+.search-input {
+    border: none;
+    outline: none;
+    padding: 5px 10px;
+    flex-grow: 1;
+}
+
+.search-btn {
+    background: none;
+    border: none;
+    cursor: pointer;
+    padding: 5px;
+}
+
+.search-btn i {
+    color: #333;
+    font-size: 16px;
+}
+
+/* Style pour chaque élément de la liste */
+.film-item {
+    padding: 10px 15px;
+    cursor: pointer;
+    /* Change le curseur en forme de main */
+    transition: background-color 0.3s ease;
+}
+
+/* Effet sur hover */
+.film-item:hover {
+    background-color: #f0f0f0;
+}
+
+.user-name {
+    margin-right: 8px;
+    font-weight: 500;
+    color: #333;
+    transition: color 0.3s ease;
+}
+
+.user-name:hover {
+    color: #007bff;
+    /* Bleu clair au survol */
 }
