--- a/Projet/projet-pc3r/src/CSS/Navbar.css
+++ b/Projet/projet-pc3r/src/CSS/Navbar.css
@@ -101,7 +101,7 @@
     border-radius: 0.375rem;
     /* rounded */
     padding: 0.5rem 1rem;
-    font-size: 28px;
+    font-size: 1rem;
     /* text-xs */
     color: #6b7280;
     cursor: pointer;
@@ -167,6 +167,6 @@
 }
 
 .user-name:hover {
-    color: #007bff;
+    color: #033366;
     /* Bleu clair au survol */
 }
