--- a/Projet/projet-pc3r/src/CSS/Navbar.css
+++ b/Projet/projet-pc3r/src/CSS/Navbar.css
@@ -12,6 +12,7 @@
     /* text-neutral-500 */
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     /* shadow-lg */
+    z-index: 2;
 }
 
 .navbar-dark {
